src/objects/EmployeeBusinessHours__c.object
<CustomObject>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>Hora de salida</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>FridayDate__c</fullName>
        <label>Viernes</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MondayDate__c</fullName>
        <label>Lunes</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PublicHolidays__c</fullName>
        <label>Festivo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lunes</fullName>
                </value>
                <value>
                    <fullName>Martes</fullName>
                </value>
                <value>
                    <fullName>Miércoles</fullName>
                </value>
                <value>
                    <fullName>Jueves</fullName>
                </value>
                <value>
                    <fullName>Viernes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Hora de entrada</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>ThursdayDate__c</fullName>
        <label>Jueves</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TuesdayDate__c</fullName>
        <label>Martes</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WednesdayDate__c</fullName>
        <label>Miércoles</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Horario de empleado</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nombre del horario</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Horario de empleados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>